--- a/Rapport/content/koordinattransformation.tex
+++ b/Rapport/content/koordinattransformation.tex
@@ -1,7 +1,7 @@
 \section{Koordinattransformation}
 \label{sec:koordinattransformation}
 
-De kartesiske koordinater \(P_k=[x, y, z]\) skal transformeres til sværiske koordinater \(P_s=[\rho \text{ ; } \phi \text{ ; } \theta]\), hvor \(\phi\) og \(\theta\) bruges som vinkelbestemmelserne for hhv. tilt og pan og \(\rho\) er afstanden fra PTS til duen som funktion af tiden.
+De kartesiske koordinater \(P_k=[x, y, z]\) skal transformeres til sfæriske koordinater \(P_s=[\rho \text{ ; } \phi \text{ ; } \theta]\), hvor \(\phi\) og \(\theta\) bruges som vinkelbestemmelserne for hhv. tilt og pan og \(\rho\) er afstanden fra PTS til duen som funktion af tiden.
 Positionbestemmelsen som funktion af tiden for det kartesiske koordinatset er udredt i afsnit \ref{subsubsec:para}.
 Idet vinklerne skal bestemmes i forhold til PTS's rotationscenter og ikke koordinatsystemets origo, skal PTS's rotationscenter trækkes fra, \(PTS=[\text{19,2 ; 0 ; 0,45}]\). 
 
@@ -13,19 +13,19 @@ Koordinattransformation tager udgangspunkt i den kartisiske stedvektor \(Pos(t) 
 \label{eq:pf:stedvektorparabel}
 \end{split}
 \end{align}
-Før koordinattransformationen fra kartesiske til sværiske koordinater vises et grafisk overblik af \(\phi\) og \(\theta\) samt \(\rho\), figur \ref{fig:thetaphi_degree}. Grundet PTS offset er origo for det særiske koordinatsystem, origo af PTS to rotationsakser. 
+Før koordinattransformationen fra kartesiske til sfæriske koordinater vises et grafisk overblik af \(\phi\) og \(\theta\) samt \(\rho\), figur \ref{fig:thetaphi_degree}. Grundet PTS offset er origo for det særiske koordinatsystem, origo af PTS to rotationsakser. 
 
 \begin{figure}[!th]
 \centering
 \begin{tikzpicture}[scale=4]
 \include*{./graphics/3d_in_xyz_plane}
 \end{tikzpicture}
-\caption[Sværisk koordinatsystem til koordinattransformation]{Viser duens placering i det sværiske rum som funktion af  \(\phi\), \(\theta\) og \(\rho\).}
+\caption[Sfærisk koordinatsystem til koordinattransformation]{Viser duens placering i det sfæriske rum som funktion af  \(\phi\), \(\theta\) og \(\rho\).}
 \label{fig:thetaphi_degree}
 \end{figure}
 
-\subsection{Sværisk koordinater}
-Som det fremgår i problemformuleringen modtager PTS lerduens position som kartetiske koordinationer med en frekvens på 60 [Hz]. Dette bevirker at transformationen fra kartesiske koordinater til sværiske koordinater gøres ud fra nedenstående ligning \ref{eq:sv_koordi}.
+\subsection{Sfærisk koordinater}
+Som det fremgår i problemformuleringen modtager PTS lerduens position som kartetiske koordinationer med en frekvens på 60 [Hz]. Dette bevirker at transformationen fra kartesiske koordinater til sfæriske koordinater gøres ud fra nedenstående ligning \ref{eq:sv_koordi}.
 \begin{align}
 \begin{split}
 { P }_{ s } =\left( \begin{matrix} \rho  \\ \phi  \\ \theta  \end{matrix} \right) =\left( \begin{matrix} \sqrt { { { P }_{ c_{ x } } }^{ 2 }+{ { P }_{ c_{ y } } }^{ 2 }+{ { P }_{ c_{ z } } }^{ 2 } }  \\ { tan }^{ -1 }\left( \frac { \sqrt { { { P }_{ c_{ x } } }^{ 2 }+{ { P }_{ c_{ y } } }^{ 2 } }  }{ { P }_{ c_{ z } } }  \right)  \\ { tan }^{ -1 }\left( \frac { { P }_{ c_{ y } } }{ { P }_{ c_{ x } } }  \right)  \end{matrix} \right) %\\
