--- a/Rapport/content/indholdsfortegnelse.tex
+++ b/Rapport/content/indholdsfortegnelse.tex
@@ -1,5 +1,6 @@
 \newpage
 \tableofcontents
 \listoffigures
+\todo[inline,author=Anders]{Der mangler at opdateres figur tekster.}
 \listoftables  
-%\pagestyle{empty}
+
