--- a/Rapport/content/templates.tex
+++ b/Rapport/content/templates.tex
@@ -3,6 +3,7 @@
 %Kusiv \textit{}
 %Funktioner \texttt{}
 %URL \url{}
+% ^{\circ} Degree symbol
 
 %%%%%%%%%%%% PUNKTER/NUMMER %%%%%%%%%%%%
 %\begin{enumerate}
