--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -20,25 +20,16 @@
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{0.7\baselineskip}%
 
+
+
+
+\include{./content/intro}
 %%%%%%%%% RAPPORTENS KAPTILER BEGYNDER!!!
-\include{./content/forkortelser}
-\include{./content/forord}
-\include{./content/indledning}
-\include{./content/problemformulering}
-\include{./content/kravspecifikation}
-\include{./content/projekt_overblik}
-%%%%%%%%%%%% Sektioner %%%%%%%%%%%%
-\include{./content/PTS}
-\include{./content/koordinattransformation}
-\include{./content/kontrollerdesign}
-\include{./content/Mikrocontroller}
-\include{./content/FPGA}
-\include{./content/kommunikation_mellem_mikrocontroller_og_FPGA}
-\include{./content/diskussion}
-\include{./content/konklusion}
-
-
-
+\include{./content/application}
+\include{./content/systemidentification}
+\include{./content/implementering}
+\include{./content/regulering}
+\include{./content/evaluering}
 %%%%%%%%%%%% Litteratur %%%%%%%%%%%%
 \bibliography{litteraturliste}
 %%%%%%%%%%%% Appendix %%%%%%%%%%%%
@@ -53,7 +44,7 @@
 
 
 %%%%%%%%%%%% Bilag %%%%%%%%%%%%
-\input{./content/bilag}
+%\input{./content/bilag}
 
 
 
