rettet og givet lidt feedback.

--- a/Rapport/content/forkortelser.tex
+++ b/Rapport/content/forkortelser.tex
@@ -1,7 +1,17 @@
 \section*{Preface}
 
-\subsection*{Projekt overview}
+\subsection*{Projekt opdeling}
+\begin{itemize}
+\item [Part I:] Application
+\item [Part II:] Application
+\item [Part I]: Application
+\item [Part I]: Application
+\item [Part I]: Application
+\item [Part I]: Application
 
+
+
+\end{itemize}
 
 \subsection*{CDROM indhold}
 \begin{itemize}
