--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -8,7 +8,7 @@ Afskydning fra ”High-House” med PTS placeret på station 4, jf. figur \ref{f
 \begin{figure}[th!]
 \centering
 \includegraphics[width=1\textwidth]{./graphics/skeet_diagram_cropped_axes}
-\caption[tekst i indholdsfortegnelsen]{figurtekst}
+\caption[Skitse af ES]{Optegning af skyttepositioner samt lerduens flugt fra de to affyringsstationer hhv. "High House", "Low House". PTS er palceret på position 4.}
 \label{fig:ES}
 \end{figure}	
 PTS' udgangsposition er at pan-rammen står vinkelret på x-aksen jf. figur \ref{fig:ES},
@@ -17,7 +17,7 @@ og at tilt-rammen er lodret (parallel med yz-planet).
 Trackingen skal forestille at have til formål at assistere i nedskydningen af lerduen,
 og man skal således forestille sig et gevær monteret på tilt-rammen:
 Et tænkt masseløst gevær placeret i skæringspunktet mellem pan- og tilt-akserne står vinkelret
-på tilt-planet, og skal skyde lerduen jf. reglerne for ES, dvs. inden den når "low house"\todo[inline,author=Anders]{Det er ikke "low house" men nedslagspunkt.} jf. figur \ref{fig:ES}.
+på tilt-planet, og skal skyde lerduen jf. reglerne for ES, dvs. inden lerduen når "shooting boundary", figur \ref{fig:ES}.
 Da man har to skud til rådighed, er det et krav at trackingen foretaget af PTS har stabiliseret sig på lerduen
 i tide, så man kan nå at affyre to skud.
 
