Ziegler Nichols table

--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -1,4 +1,25 @@
 \section{PID optimering}
 \label{sec:PID}
 \subsection{Nichols Ziegler}
-\subsection{Manuel PID-tuning (Matlab tool optimering)}
+
+
+\begin{figure}[th!]
+\centering
+\begin{tabular}{l|c|c|c}
+Controller Type \({ G }_{ c }\left( s \right)\) & \(K_P\) & \(K_I\) & \(K_D\)\\\hline
+\({ K }_{ P } \)& \(0.5  { K }_{ U }\) &-&-\\
+\({ K }_{ P }+\frac { { K }_{ I } }{ s } \) & \(0.45  { K }_{ U }\) & \( \frac { 0.54  { K }_{ U } }{ { T }_{ U } }  \) &-\\
+\({ K }_{ P }+\frac { { K }_{ I } }{ s } +{ K }_{ D }   s\) & \(0.6  { K }_{ U } \) &  \( \frac { 1.2  { K }_{ U } }{ { T }_{ U } }  \) & \(\frac { 0.6  { K }_{ U }  { T }_{ U } }{ { T }_{ U } }  \)
+\end{tabular}
+\captionsetup{type=table}
+\caption[tekst i indholdsfortegnelsen]{tabeltekst}
+\label{tb:}
+\end{figure}
+
+hvor \(K_U\) er bestemt ved og \(T_U\) er bestemt ved
+
+
+
+
+
+\subsection{Automatisk optimering af PID-koefficienter}
