Flyttet start side

--- a/Rapport/content/application.tex
+++ b/Rapport/content/application.tex
@@ -1,3 +1,5 @@
+\pagenumbering{arabic}
+\setcounter{page}{1}
 \part{Application}
 \include{./content/problemformulering}
 \include{./content/kravspecifikation}
