Problemformulinger ændret til skal være skudt inden shooting boundary (SB) 1.18 sekunder. Dette sikre at vi ikke får en negativ viklen i koordinattransformationen.

--- a/Rapport/graphics/parabola_in_xy_plane.tex
+++ b/Rapport/graphics/parabola_in_xy_plane.tex
@@ -46,6 +46,8 @@
 \draw(18.29,-5.5)--(0,0);
 
 
+\fill (19.4793,5.9) circle[radius=9pt] node[above]{SB};
+
 
 \coordinate (PP2) at (20,3.5);
 \coordinate (PP1) at (20,0);
