--- a/Rapport/content/problemequation.tex
+++ b/Rapport/content/problemequation.tex
@@ -79,11 +79,7 @@ v_0 &=& 34,589 \left[ \frac { m }{ s }  \right]
 \label{eq:pf:vektorparabel2}
 \end{split}
 \end{align}
-\todo[inline,author=Anders]{JEG MANGLER AT SKRIVE OMKRING SB..............}
-Nedenstående ligning bruges til tidbestemmelsen a
-
-
-Ligning bruges til bestemmelse af hvordn
+\todo[inline,author=Anders]{Hvad skal nedenstående ligning bruges til?}
 \begin{align}
 \begin{split}
 y(x) &= \tan \left(9,103 \degree \right) x - \frac{9,82x^2}{2(\cos \left(9,103 \degree \right) 34,589)^2} + 3,05 \\
