--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -23,7 +23,7 @@ i tide, så man kan nå at affyre to skud.
 
 Det tænkte gevær er et 12 gauge haglgevær med Skeet Choke.
 
-Lerduens koordinater i det kartesiske koordinatsystem som vist på figur \ref{fig:ES}
+Lerduens koordinater er i det kartesiske koordinatsystem som vist på figur \ref{fig:ES}
 vil med en frekvens på 60 [Hz] blive givet som input til systemet.
 
 Som angivet i projektoplægget skal reguleringen foregå på en microcontroller,
