--- a/Rapport/litteraturliste.bib
+++ b/Rapport/litteraturliste.bib
@@ -127,3 +127,14 @@ title = {DC motors: dynamic model and control techniques},
 year = {2012},
 url = {http://control.disp.uniroma2.it/zack/LabRob/DCmotors.pdf}
 }
+
+
+
+@ONLINE{patternandchoke,
+author = {Wikipedia},
+title = {Shotgun},
+year = {2014},
+url = {http://en.wikipedia.org/w/index.php?title=Shotgun&oldid=608802310}
+}
+
+
