--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -7,7 +7,10 @@ samt det udleverede Pan \& Tilt-systems fysiske begrænsninger.
 Lerduens bane kan beregnes vha. de i reglerne givne værdier for affyringspunkt, forventet nedslagspunkt
 og "Target Crossing Point" (punktet, som lerduen skal passere).
 Med antagelsen om negligerbar luftmodstand kan en kasteparabel således udregnes ved interpolation af disse tre punkter.
-Kasteparablen er givet ved ligning \ref{eq:ks:vektorparabel3d}, med orego som angivet på figur \ref{fig:ES}.
+Kasteparablen er givet ved ligning \ref{eq:pf:vektorparabel2}, med orego som angivet på figur \ref{fig:ES}.
+
+Med kasteparablen er det muligt at specificere systemets betingelser yderligere:
+Lerduen bliver affyret med en hastighed på 34,589 \([\frac{m}{s}]\) i en vinkel på \(9,103^{\circ}\) ift. xz-planet jf. figur \ref{fig:ES} og ligning \ref{eq:ks:vektorparabel3d}.
 \begin{equation}
 Pos\left( t \right) = 
 \left( \begin{matrix} 
@@ -21,16 +24,6 @@ Pos\left( t \right) =
 \label{eq:ks:vektorparabel3d}
 \end{equation}
 En gennemgang af beregningerne der ligger bag kasteparablen findes i sektion \ref{sec:udregning_af_parabel}.
-
-Med kasteparablen er det muligt at specificere systemets betingelser yderligere:
-Lerduen bliver affyret med en hastighed på 34,589 \([\frac{m}{s}]\) i en vinkel på \(9,103^{\circ}\) ift. xz-planet jf. figur \ref{fig:ES}.
-
-
-
-
-
-henvis til ligning
-
 
 Set ovenfra bevæger målet sig som illustreret på figur \ref{fig:para_in_xy_plane}. Punktet D er High House (affyringensstedet), Shooting Boundary (SB) og nedslagspunktet G er hhv. 40,3 [m] og 52 [m] fra High-House. PTS' er placeret i punktet B.\\
 \begin{figure}[h!]
@@ -57,12 +50,12 @@ der er lavere end tiden \(t_{s}\) angivet i ligning, \ref{eq:ks:settlingtime}.
   t_{s} &= 0,557 [s] &\text{(Settling Time)}
   \label{eq:ks:settlingtime}
 \\
-  t_{n} &= 1.18 [s] &\text{(Shooting Boundary Limit)}
+  t_{n} &= 1,18 [s] &\text{(Shooting Boundary Limit)}
   \label{eq:ks:nedslagstid}
 \end{align}
 
 Haglene fra et 12 gauge haglgevær med Skeet Choke spredes så de dækker et område
-med en diameter på 1,32 [m] på en afstand på 37 [m], \todo[inline,author=Mikael]{Kilde: wikipedia}. %http://en.wikipedia.org/wiki/Shotgun#Pattern_and_choke
+med en diameter på 1,32 [m] på en afstand på 37 [m], \citep[Pattern and choke]{patternandchoke}.
 Spredningsvinklen er dermed givet ved ligning \ref{eq:ks:spredning}.
 \begin{align}
   Spredning &= \tan \left(\frac{1,32}{2} / 37 \right) \\
