--- a/Rapport/content/projekt_overblik.tex
+++ b/Rapport/content/projekt_overblik.tex
@@ -1,10 +1,12 @@
 \section{Projektoverblik}
 \label{sec:projektoverblik}
 \todo[inline,author=Anders]{Der må gerne gives feedback.. jeg synes selv jeg er lidt på bar bund med hvad der skal stå}
-Inden rapportens kommende afsnit introdukseres kort et overblik af projektets komponenter og hvordan de kommunikerer med hinanden.\\
+Inden rapportens kommende afsnit introdukseres et kort overblik af projektets komponenter og hvordan de kommunikerer med hinanden.\\
 Som der ses på nedenstående figur \ref{fig:overview_openloop_PTS}, er de forskellige komponenter opdelt i forskellige farver.\\
 De grønne kasser repræsenterer mikrocontrolleren som vha. UART kommunikerer med brugeren. \\
 FPGA'en er repræsenteret vha. en lilla kasse som er bindeledet mellem mikrocontrolleren og de to DC motorer. FPGA'en og mikrocontrolleren kommunikere sammen vha. SPI. FPGA'en genererer to PWM-signaler, som driver hhv. H-broen og motor for pan og H-broen og motor for tilt. DC motorene sender deres encoder feedback til FPGA'en.
+\bigskip
+
 \begin{figure}[!th]
 \centering
 \begin{tikzpicture}[auto, node distance=1cm,>=latex']
