--- a/Rapport/content/koordinattransformation.tex
+++ b/Rapport/content/koordinattransformation.tex
@@ -33,4 +33,4 @@ Som det fremgår i problemformuleringen modtager PTS lerduens position som karte
 \label{eq:sv_koordi}
 \end{split}
 \end{align}
-hvor \(\rho\) er afstanden i meter, \(\phi\) og \(\theta\) er angivet i grader. \citep[Kap. 10.6, s. 598]{adam}.
+hvor \(\rho\) er afstanden i meter, \(\phi\) og \(\theta\) er angivet i grader. \citep[Kap. 10.6]{adam}.
