--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -207,7 +207,13 @@ Som udgangspunkt vælges derfor en samplingfrekvens på \(f_s=600 \mathrm{\left[
 så diskretiseringen med god tilnærmelse har samme performance som det kontinuerte system,
 og så der er mest tid til reguleringssløjfens beregninger og SPI-kommunikation.
 
-\subsection{Analyse af den diskretiserede overføringsfunktion}
+\subsection{Analyse af den diskretiserede}
+\todo[inline,author=Anders]{Pan og tilt diskretiserende transferfunktioner. }
+
+\begin{equation}
+	
+	\label{eq:pantiltdiskretiserendetf} 
+ \end{equation}
 Den i afsnit \ref{subsec:choosefs} udførte sammenligning af det diskretiserede systems performance
 med det kontinuerte systems performance viser,
 at Rise Time stiger med 3,3 \% for pan og 0,10 \% for tilt,
