Tilføjet todo samt eq.

--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -211,9 +211,10 @@ og så der er mest tid til reguleringssløjfens beregninger og SPI-kommunikation
 \todo[inline,author=Anders]{Pan og tilt diskretiserende transferfunktioner. }
 
 \begin{equation}
-	
+	pan
 	\label{eq:pantiltdiskretiserendetf} 
  \end{equation}
+ 
 Den i afsnit \ref{subsec:choosefs} udførte sammenligning af det diskretiserede systems performance
 med det kontinuerte systems performance viser,
 at Rise Time stiger med 3,3 \% for pan og 0,10 \% for tilt,
