tilføjet todo til projekt-overblik

--- a/Rapport/content/projekt_overblik.tex
+++ b/Rapport/content/projekt_overblik.tex
@@ -15,3 +15,5 @@ FPGA'en er repræsenteret vha. en lilla kasse som er bindeledet mellem mikrocont
 \caption[Principskitse af PTS]{Principskitse af PTS med farvekoder.}
 \label{fig:overview_openloop_PTS}
 \end{figure}
+
+\todo[inline, author=Michael]{Vi skal beslutte hvad vi vil med dette afsnit: Læseguide? Blokopdeling? Indledning? Krav til enkelte dele? Overblik over valgt løsning? \\ Det afhænger vel af hvilken rapportstruktur vi vælger.}
