--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -31,6 +31,7 @@ til hvert system, og at der skal findes en overførselsfunktion for hvert system
 De følgende beregninger tager altså udgangspunkt i det simplificerede afkoblede system.
 
 \subsection{DC-Motor}
+\todo[inline, author=Michael]{Henvis til motorens datasheet}
 To DC-motorer af typen EMG30 er forbundet til systemet.
 Det antages, at motorerne kan beskrives ved samme matematiske model.
 Den matematiske model af DC-motoren er beskrevet i appendix \ref{sec:dcmotor},
@@ -106,7 +107,7 @@ Gearingen til rammerne er i forholdet 1:3, og da der er 360 encoder-ticks pr. ro
 er kvantiseringsintervallet \(\frac{1}{1080}\).
 
 På FPGA'en genereres et PWM-signal til hver motors H-bro ud fra en
-duty cycle som mikrokontrolleren leverer.
+duty cycle som mikrocontrolleren leverer.
 PWM-signalet forstærkes af H-broen til et firkantsignal med en amplitude på 12 [V],
 som leveres til motoren.
 En overførselsfunktion for denne duty cycle - motorspændingsfald konvertering ønskes
