fpga-diagram: output decoder -> output encoder

--- a/Rapport/graphics/FPGA_blok.tex
+++ b/Rapport/graphics/FPGA_blok.tex
@@ -18,7 +18,7 @@
 \node[task_description](SPI) [yshift=2.5cm,,below of= PWM] {SPI};
 \node[task_title](SPIcom) [left of= SPI] {SPI};
 \node[task_description](input_Decoder) [yshift=0.75cm,right of= SPI] {Input decoder};
-\node[task_description](output_Decoder) [yshift=-0.75cm,right of= SPI] {Output decoder};
+\node[task_description](output_Decoder) [yshift=-0.75cm,right of= SPI] {Output encoder};
 
 
 \node[](child1)[xshift=3cm,right of=Tic_counter]{};
